--- a/css/theme.css
+++ b/css/theme.css
@@ -61,6 +61,9 @@ html{
 .slide-in-top-parallax{
   animation: slide-in-top-parallax 3s;
 }
+.slide-in-top-menu{
+  animation: slide-in-top-menu 3s;
+}
 
 @keyframes translate{
   0% {
@@ -144,6 +147,20 @@ html{
       opacity: 1;
     }
   }
+  @keyframes slide-in-top-menu {
+    0% {
+      -webkit-transform: translateY(100px);
+              transform: translateY(100px);
+      opacity: 0;
+      
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
   @keyframes slide-in-top {
     0% {
       -webkit-transform: translateY(50px);
@@ -158,7 +175,7 @@ html{
   }
 
 
-  /* nuage entree par la droite*/
+  /* nuage entree par la droite verifier siplus besoin*/
  @-webkit-keyframes slide-in-left {
     /* 0% {
       -webkit-transform: translateX(1000px);
@@ -348,9 +365,6 @@ ul.nav-menu{
   top: 20px;
   right: 20px;
 }
-/* .images-menu{
-  position: relative;
-} */
 
 .sunflower{
   position: absolute;
@@ -448,4 +462,8 @@ ul.nav-menu{
     margin: 20px;
 }
   
+}
+.swiper-slide-active{
+  transform: scale(1.2)!important;
+  transition-duration: 1s!important;
 }
